主流程响应式编程实现